fixed 3d mesh on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -313,6 +313,9 @@ footer {
   canvas {
     height: 50vw !important;
   }
+  #three-js-container {
+    height: 50vw !important;
+  }
 }
 
 /* *******************************************************
